--- a/index.html
+++ b/index.html
@@ -80,54 +80,54 @@
         </section>
 
         <main class="contenedor__main container">
-            <h3>Videos Populares</h3>
+            <h3 class="contenedor__main__titulo">Videos Populares</h3>
             <div class="row">
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
-                    <h4>Despues de la vela -Yuki Mukami</h4>
-                    <p>164k visitas - 1 semana atras</p>
+                    <h4 class="contenedor__main__subtitulo">Despues de la vela -Yuki Mukami</h4>
+                    <p class="contenedor__main__frase">164k visitas - 1 semana atras</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-2.png" alt="video2">
-                    <h4>Far Away - Yuki Mukami</h4>
-                    <p>100k visitas - 1 mes atras</p>
+                    <h4 class="contenedor__main__subtitulo">Far Away - Yuki Mukami</h4>
+                    <p class="contenedor__main__frase">100k visitas - 1 mes atras</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-3.png" alt="video3">
-                    <h4>City-Yuki Mukami</h4>
-                    <p>20k visitas - 1 mes atras</p>
+                    <h4 class="contenedor__main__subtitulo">City-Yuki Mukami</h4>
+                    <p class="contenedor__main__frase">20k visitas - 1 mes atras</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-4.png" alt="video4">
-                    <h4>A Yuki Tale-Yuki Mukami</h4>
-                    <p>1m visitas - 1 año atras</p>
+                    <h4 class="contenedor__main__subtitulo">A Yuki Tale-Yuki Mukami</h4>
+                    <p class="contenedor__main__frase">1m visitas - 1 año atras</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-5.png" alt="video5">
-                    <h4>Mapocho-Yuki Mukami</h4>
-                    <p>100k visitas - 1 mes atras</p>
+                    <h4 class="contenedor__main__subtitulo">Mapocho-Yuki Mukami</h4>
+                    <p class="contenedor__main__frase">100k visitas - 1 mes atras</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-6.png" alt="video6">
-                    <h4>Luky Days-Yuki Mukami</h4>
-                    <p>40k visitas - 3 meses atras</p>
+                    <h4 class="contenedor__main__subtitulo">Luky Days-Yuki Mukami</h4>
+                    <p class="contenedor__main__frase">40k visitas - 3 meses atras</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-7.png" alt="video7">
-                    <h4>30 days in My House</h4>
-                    <p>10k visitas - 4 meses atras</p>
+                    <h4 class="contenedor__main__subtitulo">30 days in My House</h4>
+                    <p class="contenedor__main__frase">10k visitas - 4 meses atras</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-8.png" alt="video8">
-                    <h4>Santiago-Yuki Mukami</h4>
-                    <p>40k visitas - 3 meses atras</p>
+                    <h4 class="contenedor__main__subtitulo">Santiago-Yuki Mukami</h4>
+                    <p class="contenedor__main__frase">40k visitas - 3 meses atras</p>
                 </div>
             </div>
         </main>
