--- a/index.html
+++ b/index.html
@@ -85,49 +85,49 @@
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
                     <h4 class="contenedor__main__subtitulo">Despues de la vela -Yuki Mukami</h4>
-                    <p class="contenedor__main__frase">164k visitas - 1 semana atras</p>
+                    <p class="contenedor__main__frase">164k visitas - 1 semana atrás</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-2.png" alt="video2">
                     <h4 class="contenedor__main__subtitulo">Far Away - Yuki Mukami</h4>
-                    <p class="contenedor__main__frase">100k visitas - 1 mes atras</p>
+                    <p class="contenedor__main__frase">100k visitas - 1 mes atrás</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-3.png" alt="video3">
                     <h4 class="contenedor__main__subtitulo">City-Yuki Mukami</h4>
-                    <p class="contenedor__main__frase">20k visitas - 1 mes atras</p>
+                    <p class="contenedor__main__frase">20k visitas - 1 mes atrás</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-4.png" alt="video4">
                     <h4 class="contenedor__main__subtitulo">A Yuki Tale-Yuki Mukami</h4>
-                    <p class="contenedor__main__frase">1m visitas - 1 año atras</p>
+                    <p class="contenedor__main__frase">1m visitas - 1 año atrás</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-5.png" alt="video5">
                     <h4 class="contenedor__main__subtitulo">Mapocho-Yuki Mukami</h4>
-                    <p class="contenedor__main__frase">100k visitas - 1 mes atras</p>
+                    <p class="contenedor__main__frase">100k visitas - 1 mes atrás</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-6.png" alt="video6">
                     <h4 class="contenedor__main__subtitulo">Luky Days-Yuki Mukami</h4>
-                    <p class="contenedor__main__frase">40k visitas - 3 meses atras</p>
+                    <p class="contenedor__main__frase">40k visitas - 3 meses atrás</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-7.png" alt="video7">
                     <h4 class="contenedor__main__subtitulo">30 days in My House</h4>
-                    <p class="contenedor__main__frase">10k visitas - 4 meses atras</p>
+                    <p class="contenedor__main__frase">10k visitas - 4 meses atrás</p>
                 </div>
 
                 <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-8.png" alt="video8">
                     <h4 class="contenedor__main__subtitulo">Santiago-Yuki Mukami</h4>
-                    <p class="contenedor__main__frase">40k visitas - 3 meses atras</p>
+                    <p class="contenedor__main__frase">40k visitas - 3 meses atrás</p>
                 </div>
             </div>
         </main>
