--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             </div>
             <div class="contenedor__nav__lista">
                 <ul>
-                    <li><i class="fas fa-search"></i></li>
-                    <li><i class="fas fa-video"></i></li>
-                    <li><i class="fas fa-plus"></i></li>
-                    <li><i class="fas fa-bell"></i></li>
+                    <li><i class="fas fa-search d-none d-sm-none d-md-block"></i></li>
+                    <li><i class="fas fa-video d-none d-sm-none d-md-block"></i></li>
+                    <li><i class="fas fa-plus d-none d-sm-none d-md-block"></i></li>
+                    <li><i class="fas fa-bell d-none d-sm-none d-md-block"></i></li>
                     <li><i class="fas fa-bars"></i></li>
                 </ul>
             </div>
@@ -73,7 +73,7 @@
                     <p>30.000 seguidores</p>
                 </div>
             </div>
-            <div class="profile__buttons">
+            <div class="profile__buttons d-none d-sm-none d-md-block">
                 <button class="profile__buttons__mensaje"><h5>Mensaje</h5></button>
                 <button class="profile__buttons__seguir"><h5>Seguir</h5></button>
             </div>
