--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             </div>
             <div class="contenedor__nav__lista">
                 <ul>
-                    <li><i class="fas fa-search d-none d-sm-none d-md-block"></i></li>
-                    <li><i class="fas fa-video d-none d-sm-none d-md-block"></i></li>
-                    <li><i class="fas fa-plus d-none d-sm-none d-md-block"></i></li>
-                    <li><i class="fas fa-bell d-none d-sm-none d-md-block"></i></li>
+                    <li><i class="fas fa-search"></i></li>
+                    <li><i class="fas fa-video"></i></li>
+                    <li><i class="fas fa-plus"></i></li>
+                    <li><i class="fas fa-bell"></i></li>
                     <li><i class="fas fa-bars"></i></li>
                 </ul>
             </div>
@@ -73,7 +73,7 @@
                     <p>30.000 seguidores</p>
                 </div>
             </div>
-            <div class="profile__buttons d-none d-sm-none d-md-block">
+            <div class="profile__buttons">
                 <button class="profile__buttons__mensaje"><h5>Mensaje</h5></button>
                 <button class="profile__buttons__seguir"><h5>Seguir</h5></button>
             </div>
@@ -132,6 +132,14 @@
             </div>
         </main>
     </div>
+
+
+      <!--JQuery 3.5.1-->
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C   +OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <!--Popper JS 1.16.1-->
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/     reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <!--Bootstrap JS 4.5.3-->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 
 </html>
